--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -13,4 +13,13 @@ Lint/BooleanSymbol:
 
 Style/Documentation:
   Enabled: false
+
+Metrics/AbcSize:
+  Max: 20
+
+Metrics/MethodLength:
+  Max: 15
+
+Metrics/CyclomaticComplexity:
+  Max: 10
   
